--- a/plugins/grogg19/projects/models/project/columns.yaml
+++ b/plugins/grogg19/projects/models/project/columns.yaml
@@ -1,10 +1,10 @@
 columns:
     name:
-        label: 'Название проекта'
+        label: grogg19.projects::lang.plugin.title_label
         type: text
     id:
         label: id
         type: number
     description:
-        label: description
+        label: grogg19.projects::lang.plugin.description_label
         type: text
