--- a/plugins/grogg19/projects/models/project/columns.yaml
+++ b/plugins/grogg19/projects/models/project/columns.yaml
@@ -1,8 +1,7 @@
 columns:
     name:
-        label: grogg19.projects::lang.plugin.title_label
+        label: 'grogg19.projects::lang.plugin.title_label'
         type: text
-
     id:
         label: id
         type: number
