feat(view): Сортировка списка проектов по столбцам

--- a/plugins/grogg19/projects/controllers/projectscontroller/config_list.yaml
+++ b/plugins/grogg19/projects/controllers/projectscontroller/config_list.yaml
@@ -5,6 +5,7 @@ recordUrl: 'grogg19/projects/projectscontroller/update/:id'
 noRecordsMessage: 'backend::lang.list.no_records'
 recordsPerPage: 20
 showSetup: true
+showSorting: true
 showCheckboxes: true
 toolbar:
     buttons: list_toolbar
