feat(labels): Добавил поле description в форму редактирования изображения

--- a/plugins/grogg19/projects/models/photo/fields.yaml
+++ b/plugins/grogg19/projects/models/photo/fields.yaml
@@ -17,3 +17,8 @@ fields:
         emptyOption: empty
         span: left
         type: relation
+    description:
+        label: grogg19.projects::lang.plugin.photo_description
+        type: richeditor
+        span: left
+        size: small
